@@ -1,3 +1,9 @@
+2003-10-11  Mark Kettenis  <kettenis@gnu.org>
+
+	* gdbarch.sh (regset_from_core_section): New method.
+	(struct regset): Declare opaque.
+	* gdbarch.c, gdbarch.h: Regenerated.
+
 2003-10-11  Alan Modra  <amodra@bigpond.net.au>
 
 	* hppa-tdep.c (hppa_in_solib_call_trampoline): Don't refer directly to
